main section done

--- a/index.html
+++ b/index.html
@@ -15,72 +15,164 @@
 <body>
 
     <!--This is a header-banner Section-->
-    <header class="header-banner-container">
+    <section class="header-section">
+        <header class="header-banner-container">
 
-        <div class="banner-container">
+            <div class="banner-container">
 
-            <h1 class="banner-title">All Thinks Are<br>Possible If You<br> believe</h1>
-            <p class="banner-description">I hope that in this year to come, you make mistakes. Because if you are making mistakes, then you are making new things, trying new things, learning, living, pushing yourself,
-                changing yourself, changing your world.</p>
-            <button class="banner-btn">Contact us</button>
+                <h1 class="banner-title">All Thinks Are<br>Possible If You<br> believe</h1>
+                <p class="banner-description">I hope that in this year to come, you make mistakes. Because if you are
+                    making mistakes, then you are making new things, trying new things, learning, living, pushing
+                    yourself,
+                    changing yourself, changing your world.</p>
+                <button class="banner-btn">Contact us</button>
 
-        </div>
+            </div>
 
-    </header>
+        </header>
+    </section>
     <!--This is a End of header-banner Section-->
 
     <!--This is a Pre-header-Person Section-->
-    <header class="pre-header-container">
+    <section class="pre-header-section">
+        <header class="pre-header-container">
 
-        <div class="failures-container">
+            <div class="failures-container">
 
 
-            <div class="failures-person">
-                <img src="images/pre-header/failure-person.png" alt="">
-            </div>
+                <div class="failures-person">
+                    <img src="images/pre-header/failure-person.png" alt="">
+                </div>
 
-            <div class="failures-title-desc">
-            <h1 class="failures-title">All Thinks Are<br>Possible If You<br> believe</h1>
-            <p class="failures-description">I hope that in this year to come, you make mistakes. Because if you are
-                making mistakes, then you are making new things, trying new things, learning, living, pushing yourself,
-                changing yourself, changing your world.</p>
+                <div class="failures-title-desc">
+                    <h1 class="failures-title">All Thinks Are<br>Possible If You<br> believe</h1>
+                    <p class="failures-description">I hope that in this year to come, you make mistakes. Because if you
+                        are
+                        making mistakes, then you are making new things, trying new things, learning, living, pushing
+                        yourself,
+                        changing yourself, changing your world.</p>
 
-                <div class="failures-items">
-                    
-                    <div class="f-item">
-                        <i class="fa-solid fa-circle-check"></i>
-                        <p>Contrary to popular belief, is not simply.</p>
+                    <div class="failures-items">
+
+                        <div class="f-item">
+                            <i class="fa-solid fa-circle-check"></i>
+                            <p>Contrary to popular belief, is not simply.</p>
+                        </div>
+                        <div class="f-item">
+                            <i class="fa-solid fa-circle-check"></i>
+                            <p>Contrary to popular belief, is not simply.</p>
+                        </div>
+                        <div class="f-item">
+                            <i class="fa-solid fa-circle-check"></i>
+                            <p>Contrary to popular belief, is not simply.</p>
+                        </div>
+                        <div class="f-item">
+                            <i class="fa-solid fa-circle-check"></i>
+                            <p>Contrary to popular belief, is not simply.</p>
+                        </div>
+                        <div class="f-item">
+                            <i class="fa-solid fa-circle-check"></i>
+                            <p>Contrary to popular belief, is not simply.</p>
+                        </div>
+
+
                     </div>
-                    <div class="f-item">
-                        <i class="fa-solid fa-circle-check"></i>
-                        <p>Contrary to popular belief, is not simply.</p>
-                    </div>
-                    <div class="f-item">
-                        <i class="fa-solid fa-circle-check"></i>
-                        <p>Contrary to popular belief, is not simply.</p>
-                    </div>
-                    <div class="f-item">
-                        <i class="fa-solid fa-circle-check"></i>
-                        <p>Contrary to popular belief, is not simply.</p>
-                    </div>
-                    <div class="f-item">
-                        <i class="fa-solid fa-circle-check"></i>
-                        <p>Contrary to popular belief, is not simply.</p>
-                    </div>
-
 
                 </div>
-            
+
             </div>
 
-        </div>
-
-    </header>
+        </header>
+    </section>
     <!--This is a End of Pre-header-Person Section-->
 
-    <main>
+
+
+    <!--This is a Main Section Section (My plan and daily routine)-->
+
+
+    <main class="plan-routine-section">
+
+        <!--Daily routine Section-->
+        <section class="daily-routine-container">
+
+            <h1 class="routine-title">My Daily Routine</h1>
+
+            <div class="daily-routine">
+
+                <div class="routine-item">
+
+                    <img src="images/regular-routine/time-manegement.svg" style="height: 110px; margin-top: -70px; "
+                        alt="time-manegement">
+                    <h2>Time Manegement</h2>
+                    <p>There is just enough space here for several paragraphs of text. Use it well.
+
+                        Stick to the main elements of an informative article: who, what, when, where, how, and most
+                        importantly - why.</p>
+                </div>
+
+                <div class="routine-item">
+                    <img src="images/regular-routine/watch-module.svg" style="height: 110px; margin-top: -70px;"
+                        alt="watch-module">
+                    <h2>Watching Module</h2>
+                    <p>There is just enough space here for several paragraphs of text. Use it well.
+
+                        Stick to the main elements of an informative article: who, what, when, where, how, and most
+                        importantly - why.</p>
+                </div>
+
+
+                <div class="routine-item">
+                    <img src="images/regular-routine/reading-books.svg" style="height: 110px; margin-top: -70px;"
+                        alt="reading-books">
+                    <h2>Regular Reading Book</h2>
+                    <p>There is just enough space here for several paragraphs of text. Use it well.
+
+                        Stick to the main elements of an informative article: who, what, when, where, how, and most
+                        importantly - why.</p>
+                </div>
+            </div>
+
+        </section>
+        <!--End Daily routine Section-->
+
+
+        <!--My Plan Section-->
+        <section class="my-plan-section">
+
+            <div class="my-plan-container">
+                <h1 class="container-title">My plans</h1>
+                <div class="my-plan">
+                    <div class="plan-items">
+                        <img src="images/icons/web.png" alt="Web Development">
+                        <h1 class="p-item-title">Web Development</h1>
+                        <p class="p-item-description">I want to start</p>
+                    </div>
+                    <div class="plan-items">
+                        <img src="images/icons/js.png" alt="Web Development">
+                        <h1 class="p-item-title">Javascript</h1>
+                        <p class="p-item-description">I want to Learn</p>
+                    </div>
+                    <div class="plan-items">
+                        <img src="images/icons/smoke.png" alt="Web Development">
+                        <h1 class="p-item-title">Smoking Habit</h1>
+                        <p class="p-item-description">I want to end</p>
+                    </div>
+                    <div class="plan-items">
+                        <img src="images/icons/ecom.png" alt="Web Development">
+                        <h1 class="p-item-title">E-Commerce</h1>
+                        <p class="p-item-description">I want to develop</p>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+
+
 
     </main>
+
 
     <footer>
 
