Final Project Done

--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
 
     <main class="plan-routine-section">
 
+
         <!--Daily routine Section-->
+        <!--Bonus Section-->
         <section class="daily-routine-container">
 
             <h1 class="routine-title">My Daily Routine</h1>
@@ -125,7 +127,7 @@
                 <div class="routine-item">
                     <img src="images/regular-routine/reading-books.svg" style="height: 110px; margin-top: -70px;"
                         alt="reading-books">
-                    <h2>Regular Reading Book</h2>
+                    <h2>Daily Reading Book</h2>
                     <p>There is just enough space here for several paragraphs of text. Use it well.
 
                         Stick to the main elements of an informative article: who, what, when, where, how, and most
@@ -135,6 +137,7 @@
 
         </section>
         <!--End Daily routine Section-->
+        <!--End Bonus Section-->
 
 
         <!--My Plan Section-->
@@ -169,12 +172,41 @@
         </section>
 
 
+        <section class="contact-section">
+
+            <div class="contact">
+                <h1>Always keep a positive<br> mindset</h1>
+                <button class="banner-btn" style="background-color: whitesmoke; font-weight: bold; color: rgba(0, 0, 0, 0.838); padding: 17px 25px;">Call Now</button>
+            </div>
+
+        </section>
 
 
     </main>
 
 
-    <footer>
+    <footer class="footer-container">
+
+        <div class="footer">
+            
+            <div class="contact-information-footer">
+                <h1 class="footer-title">Future</h1>
+                <p class="footer-desc">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                <p class="footer-email-phone">Email : info@gmail.com</p>
+                <p class="footer-email-phone">Phone : 01500 00 00 00</p>
+                <img class="social-fb-img" src ="images/icons/fb.png" alt="Facebook">
+                <img class="social-img" src="images/icons/twitter.png" alt="Twitter">
+                <img class="social-img" src="images/icons/youtube.png" alt="Youtube">
+                
+            </div>
+
+
+            <div class="subscribe-footer">
+                <h1 class="footer-title-subscribe">Subscribe</h1>
+                <input class="subcribe-email" type="email" name="email" placeholder="Enter your email">
+                <input class="subcribe-submit" type="submit" value="Subscribe">
+            </div>
+        </div>
 
     </footer>
 
