--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,27 +7,20 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="/images/favicon/favicon.png">
     <script src="https://kit.fontawesome.com/21de7b94d5.js" crossorigin="anonymous"></script>
-
     <title>New Year</title>
 </head>
-
 <body>
-
     <!--This is a header-banner Section-->
     <section class="header-section">
         <header class="header-banner-container">
-
             <div class="banner-container">
-
                 <h1 class="banner-title">All Thinks Are<br>Possible If You<br> believe</h1>
                 <p class="banner-description">I hope that in this year to come, you make mistakes. Because if you are
                     making mistakes, then you are making new things, trying new things, learning, living, pushing
                     yourself,
                     changing yourself, changing your world.</p>
                 <button class="banner-btn">Contact us</button>
-
             </div>
-
         </header>
     </section>
     <!--This is a End of header-banner Section-->
@@ -36,14 +28,10 @@
     <!--This is a Pre-header-Person Section-->
     <section class="pre-header-section">
         <header class="pre-header-container">
-
             <div class="failures-container">
-
-
                 <div class="failures-person">
                     <img src="images/pre-header/failure-person.png" alt="">
                 </div>
-
                 <div class="failures-title-desc">
                     <h1 class="failures-title">All Thinks Are<br>Possible If You<br> believe</h1>
                     <p class="failures-description">I hope that in this year to come, you make mistakes. Because if you
@@ -51,9 +39,7 @@
                         making mistakes, then you are making new things, trying new things, learning, living, pushing
                         yourself,
                         changing yourself, changing your world.</p>
-
                     <div class="failures-items">
-
                         <div class="f-item">
                             <i class="fa-solid fa-circle-check"></i>
                             <p>Contrary to popular belief, is not simply.</p>
@@ -74,67 +60,46 @@
                             <i class="fa-solid fa-circle-check"></i>
                             <p>Contrary to popular belief, is not simply.</p>
                         </div>
-
-
                     </div>
-
                 </div>
-
             </div>
-
         </header>
     </section>
     <!--This is a End of Pre-header-Person Section-->
 
-
-
     <!--This is a Main Section Section (My plan and daily routine)-->
 
-
     <main class="plan-routine-section">
-
-
         <!--Daily routine Section-->
         <!--Bonus Section-->
         <section class="daily-routine-container">
-
             <h1 class="routine-title">My Daily Routine</h1>
-
             <div class="daily-routine">
-
                 <div class="routine-item">
-
                     <img src="images/regular-routine/time-manegement.svg" style="height: 110px; margin-top: -70px; "
                         alt="time-manegement">
                     <h2>Time Manegement</h2>
                     <p>There is just enough space here for several paragraphs of text. Use it well.
-
                         Stick to the main elements of an informative article: who, what, when, where, how, and most
                         importantly - why.</p>
                 </div>
-
                 <div class="routine-item">
                     <img src="images/regular-routine/watch-module.svg" style="height: 110px; margin-top: -70px;"
                         alt="watch-module">
                     <h2>Watching Module</h2>
                     <p>There is just enough space here for several paragraphs of text. Use it well.
-
                         Stick to the main elements of an informative article: who, what, when, where, how, and most
                         importantly - why.</p>
                 </div>
-
-
                 <div class="routine-item">
                     <img src="images/regular-routine/reading-books.svg" style="height: 110px; margin-top: -70px;"
                         alt="reading-books">
                     <h2>Daily Reading Book</h2>
                     <p>There is just enough space here for several paragraphs of text. Use it well.
-
                         Stick to the main elements of an informative article: who, what, when, where, how, and most
                         importantly - why.</p>
                 </div>
             </div>
-
         </section>
         <!--End Daily routine Section-->
         <!--End Bonus Section-->
@@ -142,7 +107,6 @@
 
         <!--My Plan Section-->
         <section class="my-plan-section">
-
             <div class="my-plan-container">
                 <h1 class="container-title">My plans</h1>
                 <div class="my-plan">
@@ -168,48 +132,41 @@
                     </div>
                 </div>
             </div>
-
         </section>
-
 
         <section class="contact-section">
-
             <div class="contact">
                 <h1>Always keep a positive<br> mindset</h1>
-                <button class="banner-btn" style="background-color: whitesmoke; font-weight: bold; color: rgba(0, 0, 0, 0.838); padding: 17px 25px;">Call Now</button>
+                <button class="banner-btn"
+                    style="background-color: whitesmoke; font-weight: bold; color: rgba(0, 0, 0, 0.838); padding: 17px 25px;">Call
+                    Now</button>
             </div>
-
         </section>
-
-
     </main>
+    <!--Main Section has been end-->
 
 
+    <!--Footer Section has been Start-->
     <footer class="footer-container">
-
         <div class="footer">
-            
             <div class="contact-information-footer">
                 <h1 class="footer-title">Future</h1>
-                <p class="footer-desc">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                <p class="footer-desc">There are many variations of passages of Lorem Ipsum available, but the majority
+                    have suffered alteration in some form, by injected humour, or randomised words</p>
                 <p class="footer-email-phone">Email : info@gmail.com</p>
                 <p class="footer-email-phone">Phone : 01500 00 00 00</p>
-                <img class="social-fb-img" src ="images/icons/fb.png" alt="Facebook">
+                <img class="social-fb-img" src="images/icons/fb.png" alt="Facebook">
                 <img class="social-img" src="images/icons/twitter.png" alt="Twitter">
                 <img class="social-img" src="images/icons/youtube.png" alt="Youtube">
-                
             </div>
-
-
             <div class="subscribe-footer">
                 <h1 class="footer-title-subscribe">Subscribe</h1>
                 <input class="subcribe-email" type="email" name="email" placeholder="Enter your email">
                 <input class="subcribe-submit" type="submit" value="Subscribe">
             </div>
         </div>
-
     </footer>
-
+    <!--Footer Section has been End-->
 </body>
 
 </html>
