--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="/images/favicon/favicon.png?">
+    <link rel="icon" type="image/x-icon" href="./images/favicon/favicon.png?">
     <script src="https://kit.fontawesome.com/21de7b94d5.js" crossorigin="anonymous"></script>
     <title>New Year</title>
 </head>
